--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
+    "express": "^4.21.2",
     "framer-motion": "^12.4.10",
     "next": "15.2.1",
     "radix-ui": "^1.1.3",
